more alignment fixes

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -228,7 +228,6 @@ li {
 
 .checkbox {
   width: 150px;
-  height: 30px;
   border-style: solid;
   border-radius: 12px;
   margin: 5px;
@@ -256,4 +255,8 @@ li {
 .no_show {
   list-style-type: none;
   padding-inline-start: 0px;
+}
+
+.left-aligned {
+  text-align: left;
 }
